--- a/HT.UnitTests/HT.UnitTests.csproj
+++ b/HT.UnitTests/HT.UnitTests.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="Moq" Version="4.17.2" />
+    <PackageReference Include="NSubstitute" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,8 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HarmonicaTones.Domain\HT.Domain.csproj" />
-    <ProjectReference Include="..\HarmonicaTones.Presentation\HT.Presentation.csproj" />
-    <ProjectReference Include="..\HarmonicaTones.Service\HT.Service.csproj" />
   </ItemGroup>
 
 </Project>
